Enhance attendance management: add deletion of attendance records, improve query for class sessions, and optimize attendance statistics retrieval